# frappe-linter-template

./: .gitignore  README.md  pyproject.toml
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  FRAPPE_APP_GUIDELINES.md
